--- a/views/user_create.ejs
+++ b/views/user_create.ejs
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <title></title>
+    <%-include('./partials/header')%>
+    <%-include('./partials/navbar', {user:user})%>
   </head>
   <body>
     <h1>Sign Up</h1>
