--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,8 +1,10 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;400;700&display=swap');
 body {
-  padding: 50px;
-  font: 14px "Lucida Grande", Helvetica, Arial, sans-serif;
+    background-color: rgb(29, 30, 32);
+    color: white;
+    font-family: 'Montserrat', sans-serif;
 }
 
 a {
-  color: #00B7FF;
+    color: #00b7ff;
 }
