--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title><%= title %></title>
-    <link rel='stylesheet' href='/stylesheets/style.css' />
+    <%-include('./partials/header')%>
+    <%-include('./partials/navbar', {user:user})%>
   </head>
   <body>
-    <h1><%= title %></h1>
-    <p>Welcome to <%= title %></p>
+    <h1>Hello <%= locals.user ? user.username + '!' : ' guest!' %></h1>
+    <p>Viewcount: <%= viewCount%></p>
   </body>
 </html>
