--- a/views/error.ejs
+++ b/views/error.ejs
@@ -1,5 +1,7 @@
-
+<head>
     <%-include('./partials/header')%>
+    <%-include('./partials/navbar', {...(locals.user && {user:user})})%>
+</head>
 <h1><%= message %></h1>
 <h2><%= error.status %></h2>
 <pre><%= error.stack %></pre>
