--- a/views/user_login.ejs
+++ b/views/user_login.ejs
@@ -1,6 +1,6 @@
 
     <%-include('./partials/header')%>
-    <%-include('./partials/navbar', {user:user})%>
+    <%-include('./partials/navbar', {...(locals.user && {user:user})})%>
 <h1>please log in</h1>
 <form action="/users/login" method="POST">
   <label for="username">Username</label>
