--- a/views/index.ejs
+++ b/views/index.ejs
@@ -40,5 +40,17 @@
     width: 80%; 
     margin: 20px auto;
     box-shadow: 0px 8px 16px 0px rgba(0, 0, 0, 0.2);
+    animation: fadein 1s;
+  }
+
+  @keyframes fadein {
+      from {
+        opacity: 0;
+        transform: translate3d(0, -20%, 0);
+      } 
+      to {
+        opacity: 1;
+        transform: translate3d(0, 0, 0);
+      }
   }
 </style>
