--- a/views/post_create.ejs
+++ b/views/post_create.ejs
@@ -11,11 +11,29 @@
             <label for="message">Message</label>
             <br>
             <br>
-            <textarea name="message" rows="4" cols="50" placeholder="message" id="message" type="text"></textarea>
+            <textarea name="message" rows="4" cols="50"  id="message" type="text"></textarea>
             <br>
             <br>
-            <button>Post</button>
+            <button class="create-button">Post</button>
         </form>
     </div>
   </body>
 </html>
+
+<style>
+  .create-button{
+    background-color: #000000; 
+    border: none;
+    color: white;
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    display: inline-block;
+    font-size: 16px;
+    cursor: pointer;
+  }
+  textarea{
+    background-color: black;
+    color: white;
+  }
+</style>
